--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,8 @@
     transform: translateY(0);
   }
   100% {
-    transform: translateY(-50%);
+    /* transform: translateY(-50%); */
+    transform: translateY(-100%);
   }
 }
 
